Docker-Compose e Módulo Usuário
